# ChangeLog for ProMA (ProFTPd MySQL Admin)
# Copyright (C) 2002-2003 Stein Magnus Jodal. Distributed under the GPL.
# $Id$

* 2004-07-15 Stein Magnus Jodal <stein.magnus@jodal.no>
  Updated footnote text.
  Estetic changes to the stylesheet.
  Fixed tab indentation in all files.
  Cleaned up the forms and tables.
  Removed size on MRTG img-tag, so it will work well with other traffic
    graphs like RRD or Munin.
  Merged name and mail fields in user list.
  Added title-attribute with notes to the user list, so you can see the start
    of the note by pointing at the specific users row.
  Moved docs to the new subdir 'docs'.

* 2004-07-08 Stein Magnus Jodal <stein.magnus@jodal.no>
  Added support for setting homedir per user.
  Fixed priority on userlist colors.

* 2004-06-23 Stein Magnus Jodal <stein.magnus@jodal.no>
  Fixed typo in the new user mail.

* 2004-06-12 Stein Magnus Jodal <stein.magnus@jodal.no>
  Fixed typo in 'change.inc.php'.

* 2004-02-13 Stein Magnus Jodal <stein.magnus@jodal.no>
  Added check for 'config.inc.php' in 'index.php'.

* 2003-11-25 Stein Magnus Jodal <stein.magnus@jodal.no>
  Fixed bug in libs/admin.lib.php. Thanks to Ben Lentz
    <blentz@channing-bete.com>.
  Added more info about 'config.inc.php' in INSTALL.
  Changed text and design of pages/change.inc.php.
  Moved legend to bottom of user list.
  Released version 0.8.1.

* 2003-08-23 Stein Magnus Jodal <stein.magnus@jodal.no>
  Changed the font sizes and table look a bit.
  Fixed a bug in INSTALL. Thanks to Mark A. Miller <mamiller@ualr.edu>.
  Added the server name to the web page headers. 
  Added a new field to 'users', which made the 'newusers' table obsolete.
  Added code to use this new field, including support for closing accounts.
  Removed code spesific to the 'newusers' table.
  Updated the copyrights to include 2003.
  Added mail notifiers.
  Released version 0.8.

* 2002-09-19 Stein Magnus Jodal <stein.magnus@jodal.no>