@@ -43,7 +43,7 @@ Read 'UPGRADE' for upgrade instructions.
 
 LICENSE
 -------
-ProMA (ProFTPd MySQL Admin), Copyright (C) 2002-2003 Stein Magnus Jodal
+ProMA (ProFTPd MySQL Admin), Copyright (C) 2002-2004 Stein Magnus Jodal
 ProMA comes with ABSOLUTELY NO WARRANTY.
 This is free software, and you are welcome to redistribute it
 under the terms of the GNU General Public License.
