@@ -1,5 +1,5 @@
 # ChangeLog for ProMA (ProFTPd MySQL Admin)
-# Copyright (C) 2002-2003 Stein Magnus Jodal. Distributed under the GPL.
+# Copyright (C) 2002-2004 Stein Magnus Jodal. Distributed under the GPL.
 # $Id$
 
 * 2004-07-15 Stein Magnus Jodal <stein.magnus@jodal.no>
@@ -13,6 +13,7 @@
   Added title-attribute with notes to the user list, so you can see the start
     of the note by pointing at the specific users row.
   Moved docs to the new subdir 'docs'.
+  Updated copyright in the header of all files.
 
 * 2004-07-08 Stein Magnus Jodal <stein.magnus@jodal.no>
   Added support for setting homedir per user.
